# cs316-functional-programming

./: CS316-FP.cabal  CS316-Y2023.cabal  LICENSE  README.md
archives/2024/: README.md
archives/2024/lecture-notes/: Week01Intro.hs  Week02Live.hs  Week04Live.hs  Week05.hs  Week06Intro.hs  Week07Live.hs  Week08Live.hs  Week09Live.hs  Week09Live2023.hs  Week10.hs  Week10Live.hs
archives/2025/lecture-notes/: Week01Live2.hs  Week01Solutions.hs  Week02Live.hs  Week02Problems.hs  Week03Live.hs  Week06Live.hs  Week07IO.hs  Week09Live.hs
lecture-notes/: Week01.hs  Week01Intro.hs  Week01Lecture2.hs  Week01Live.hs  Week01Live2.hs  Week01Problems.hs  Week02.hs  Week02Live.hs  Week03.hs  Week03Live.hs  Week03LiveFri.hs  Week04.hs  Week04Live.hs  Week05Intro.hs  Week05Live.hs  Week06.hs  Week06Intro.hs  Week06Live.hs  Week07Intro.hs  Week07Live.hs  Week08.hs  Week08Live.hs  Week08Live2023.hs  Week09.hs  Week09Lecture.hs  Week09Live.hs  Week09Problems.hs  Week10Live.hs  Week10Live2.hs
