name:                CS316-FP
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/msp-strath/cs316-functional-programming
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lecture-notes
  exposed-modules:     Week01,
                       Week01Problems,
                       Week01Solutions,
                       Week01Intro,
                       Week01Lecture2,
                       Week02,
                       Week02Problems,
                       Week02Solutions,
                       Week02Live,
                       Week03,
                       Week03Problems,
                       Week03Solutions,
                       Week03Live,
                       Week04,
                       Week04Problems,
                       Week04Solutions,
                       Week04Live,
                       Week05,
                       Week05Problems,
                       Week05Solutions,
                       Week05Live,
                       Week06,
                       Week06Problems,
                       Week06Solutions,
                       Week06Live,
                       Week07,
                       Week07Problems,
                       Week07Solutions,
                       Week07Live,
                       Week08,
                       Week08Problems,
                       Week08Solutions,
                       Week08Live2023,
                       Week08Live,
                       Week09,
                       Week09Live2023,
                       Week09Live,
                       Week10,
--                       Week10Live,
                       Week10Live2
--  ghc-options:         -fwarn-incomplete-patterns
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.3,
                       HTTP >= 4000.3.14,
                       QuickCheck >= 2.15
